--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <li><a href="#news">About</a></li>
                 <li><a href="#our menu">Our Menu</a></li>
                 <li><a href="#happy hours">Happy Hours</a></li>
-                <li style="float: right;"><a href="#catering">Catering </a></li>
-                <li style="float: right;"><a href="#Reservation">Reservation</a></li>
-                <li style="float: right;"><a href="#gallery">Gallery</a></li>
-                <li style="float: right;"><a href="#contact">Contact</a></li>
+                <li ><a href="#catering">Catering </a></li>
+                <li ><a href="#Reservation">Reservation</a></li>
+                <li ><a href="#gallery">Gallery</a></li>
+                <li ><a href="#contact">Contact</a></li>
 
             </ul>
         </nav>
