created explore menu part

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section id="our menu">
         <div class="menu" style="text-align: center; background-color: aliceblue;height: 600px;">
             <h3>Explore <span>Menu</span></h3>
-            <div class="row">
+            <div class="row"> yuufuguyghtf
                 <div class="column">
                     <img src="/Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;">
                     <span>Burger nam</span>
