modified explore menu

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
     <section id="our menu">
         <div class="menu" style="text-align: center; background-color: aliceblue;height: 600px;">
-            <h3>Explore <span>Menu</span></h3>
-            <div class="row"> yuufuguyghtf
+            <h3>Explore <span style="color: #6CB840;">Menu</span></h3>
+            <div class="row">
                 <div class="column">
                     <img src="/Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;">
                     <span>Burger nam</span>
