created hot deals part

--- a/index.html
+++ b/index.html
@@ -73,14 +73,26 @@
                     <span>Burger nam</span>
                 </div>
             </div>
-           
+            <div class="row">
+                <div class="column">
+                    <img src="/Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;">
+                    <span> Burger nam</span>
+                </div>
+                <div class="column">
+                    <img src="/Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;">
+                    <span style="vertical-align: middle;"> Burger nam</span>
+                </div>
+                <div class="column">
+                    <img src="/Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;">
+                    <span>Burger nam</span>
+                </div>
             </div>
         </div>
     </section>
 
     <section id="happy hours">
         <div class="happy">
-            
+            <h1 style="text-align: center;"><span> Hot</span> <span style="color: #6CB840;">Deals</span></h1>
             <span style="float: left"><img src="Images/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png"
                     style="width: 200px;"><img
                     src="/Images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png"
