--- a/index.html
+++ b/index.html
@@ -10,20 +10,27 @@
 </head>
 
 <body>
+    <div class="eclipes">
+        <div class="eclipse"></div>
+    </div>
     <div class="container">
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#news">About</a></li>
-                <li><a href="#our menu">Our Menu</a></li>
-                <li><a href="#happy hours">Happy Hours</a></li>
-                <li ><a href="#catering">Catering </a></li>
-                <li ><a href="#Reservation">Reservation</a></li>
-                <li ><a href="#gallery">Gallery</a></li>
-                <li ><a href="#contact">Contact</a></li>
+        <div class="nav">
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#news">About</a></li>
+                    <li><a href="#our menu">Our Menu</a></li>
+                    <li><a href="#happy hours">Happy Hours</a></li>
+                    <li ><a href="#catering">Catering </a></li>
+                    <li ><a href="#Reservation">Reservation</a></li>
+                    <li ><a href="#gallery">Gallery</a></li>
+                    <li ><a href="#contact">Contact</a></li>
 
-            </ul>
-        </nav>
+                </ul>
+            </nav>
+
+        </div>
+        
         <section id="home">
             <div class="home">
                 <img src="/Images/image 5.png" style="float:right;padding-right: 200px;padding-top: 100px;">
