modified  footer section

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         </div>
         </div>
     </section>
+    <div class="uhgff">has af gfshfyutjasghjsgs</div>
 
     <section id="contact">
         <div class="con">
