modified  footer section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                     <li><a href="#news">About</a></li>
                     <li><a href="#our menu">Our Menu</a></li>
                     <li><a href="#happy hours">Happy Hours</a></li>
+                    <div class="span">
+                    <li><span>&#9733;</span></li>
                     <li ><a href="#catering">Catering </a></li>
                     <li ><a href="#Reservation">Reservation</a></li>
                     <li ><a href="#gallery">Gallery</a></li>
@@ -105,7 +107,7 @@
                     style="width: 200px;"></span>
             <div>
                 <div style="padding-top: 100px;padding-left: 500px;">
-                    
+
                 <h1 style="color: #6CB840;">SPECIAL COMPO PACK </h1>
                 <h3>Burger Pizz</h3>
                 <h3>Fries & Drinks</h3>
@@ -117,7 +119,6 @@
         </div>
         </div>
     </section>
-    <div class="uhgff">has af gfshfyutjasghjsgs</div>
 
     <section id="contact">
         <div class="con">
@@ -155,7 +156,7 @@
         </div>
       </div>
     </footer>
-    
+
     </secton>
 </body>
 
