--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </div>
         <section id="home">
             <div class="home">
-                <img src="/Images/image 5.png" style="float:right;padding-right: 200px;padding-top: 100px;">
-                <h1><span style="color: #6CB840;"><strong>Street</strong></span><span
-                        style="color: #EAAB1B;"><strong>Food</strong></span></h1>
+                <img src="Images/image 5.png" style="float:right; padding-right: 200px; padding-top: 100px;"></img>
+                <h1><span style="color: #6CB840;"><strong>Street</strong></span>
+                        <strong style="color: #EAAB1B;">Food</strong></h1>
                 <h2>We don't play with food</h2>
                 <p>When i was small boy my father told me <br>never recommend a church or a woman<br>
                     to anyone. And i have found it wise never to <br>recommend a restaurant
@@ -48,7 +48,7 @@
     </div>
     <section id="About">
         <div class="about">
-            <img src="Images/eating_together.png">
+            <img src="Images/eating_together.png"></img>
             <div class="im">
 
                 <h2 style="color: #EAAB1B; ">Eat Together</h2>
@@ -69,29 +69,33 @@
             <h3>Explore <span style="color: #6CB840;">Menu</span></h3>
             <div class="row">
                 <div class="column">
-                    <img src="/Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;">
+                    <img src="Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;"></img> 
                     <span>Burger nam</span>
                 </div>
                 <div class="column">
-                    <img src="/Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;">
+                    <img src="Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;"></img>
                     <span> Burger nam</span>
                 </div>
                 <div class="column">
-                    <img src="/Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;">
+                    <img src="Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;"></img>
+                    <span> Burger nam</span>
                     <span>Burger nam</span>
                 </div>
             </div>
             <div class="row">
                 <div class="column">
-                    <img src="/Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;">
+                    <img src="Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;"></img>
+                    <span> Burger nam</span>
                     <span> Burger nam</span>
                 </div>
                 <div class="column">
-                    <img src="/Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;">
+                    <img src="Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;"></img>
+                    <span> Burger nam</span>
                     <span style="vertical-align: middle;"> Burger nam</span>
                 </div>
                 <div class="column">
-                    <img src="/Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;">
+                    <img src="Images/likemeat-73_obA0IB_0-unsplash-removebg-preview (copy).png" style="width: 200px;"></img>
+                    <span> Burger nam</span>
                     <span>Burger nam</span>
                 </div>
             </div>
@@ -101,10 +105,10 @@
     <section id="happy hours">
         <div class="happy">
             <h1 style="text-align: center;"><span> Hot</span> <span style="color: #6CB840;">Deals</span></h1>
-            <span style="float: left"><img src="Images/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png"
-                    style="width: 200px;"><img
-                    src="/Images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png"
-                    style="width: 200px;"></span>
+            <span style="float: left">
+                <img src="Images/abhishek-hajare-kkrXVKK-jhg-unsplash-removebg-preview.png" style="width: 200px;"></img>
+                <img src="Images/amirali-mirhashemian-sc5sTPMrVfk-unsplash-removebg-preview.png" style="width: 200px;"></img>
+            </span>
             <div>
                 <div style="padding-top: 100px;padding-left: 500px;">
 
@@ -134,7 +138,7 @@
         <button type="button">Send</button>
 </div>
     </section>
-    <secton>
+    <section>
         <footer>
 
     <div class="row">
